# trending-repository-summarizer

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: ensure-quality.md
.claude/hooks/: format_code.py
scripts/: deploy_lambda.py  retrieve_page_blocks.py
src/trending_repository_summarizer/: main.py  md2notion.py
tests/unit/: conftest.py  test_main.py
