[project]
name = "trending-repository-summarizer"
version = "0.1.0"
description = "Summarize trending repositories on GitHub."
authors = [{ name = "Ryohei Machida", email = "r-machida@analytics-jp.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3,<3",
    "pydantic>=2.10.5,<3",
    "lxml>=5.3.0,<6",
    "langchain-openai>=0.3.0,<0.4",
    "markdown~=3.7",
    "jinja2>=3.1.5,<4",
    "universal-pathlib>=0.2.6,<0.3",
    "fsspec[s3]>=2024.12.0,<2025",
    "notion-client>=2.3.0,<3",
    "beautifulsoup4>=4.12.3,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "docformatter>=1.7.5",
    "ruff>=0.4.9",
]

[project.scripts]
main = "trending_repository_summarizer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = "tests"

[tool.ruff]
extend-exclude = ["__pycache__", "build", "dist", "scripts"]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "C4",
    "D200",
    "D201",
    "D204",
    "D205",
    "D206",
    "D210",
    "D211",
    "D213",
    "D300",
    "D402",
    "D403",
    "D404",
    "D419",
    "E",
    "F",
    "G010",
    "I001",
    "INP001",
    "N805",
    "PERF101",
    "PERF102",
    "PERF401",
    "PERF402",
    "PGH004",
    "PGH005",
    "PIE794",
    "PIE796",
    "PIE807",
    "PIE810",
    "RET502",
    "RET503",
    "RET505",
    "RUF015",
    "RUF100",
    "S101",
    "T20",
    "W",
]

[tool.bandit]
skips = ["B404", "B603", "B607"]

[tool.mypy]
files = ["src", "tests"]
strict = true
